# zlote_mysli

./: CMakeLists.txt  Makefile  README.md  README.txt  SetCommonConfig.cmake  config.json  cytaty  cytaty.csv  scheduler.py
include/: mail.hpp
mailer/: mailer.py
quotes/: quotes.py  quotes.txt  used_quotes.txt
src/: mail.cpp
